# qr_bill_app

./: .gitignore  README.md  db_models.py  decorators.py  docker-compose.override.yml  docker-compose.yml  handlers.py  init_db.py  install.sh  keyboards.py  main.py  make_i18_message.sh  map.html  openapi_sellers.json  prepare_po_file.sh  qr_scanner.py  recognize.py  requirements.txt  requirements3.txt  run_migrate.sh  start_bot.sh  test-docker-compose.yml  test.py  test123.py  test_db.py  test_map.py  test_qr_scanner.sh  translate.sh  utils.py  views.py  zdeploy.sh
backend/rest_api/: .dockerignore  Dockerfile  __main.py  alembic.ini  config.py  fastapi-start.sh  fastapi_app.py  pyproject.toml  start.sh  start_grpc_server.py  start_tests.sh
backend/rest_api/alembic/: env.py  script.py.mako
backend/rest_api/alembic/versions/: 0072c3016538_init.py  011d483580e8_init.py  018a68befaaa_init.py  01baadbb3afe_init.py  02386d351c43_init.py  027ba081c2b5_init.py  0297f84cb45d_init.py  02ab965b6edd_init.py  02e7cab561d6_init.py  0300f81e2c26_init.py  03ab34ae540b_init.py  03b8fd815839_init.py  040c02cb7745_init.py  04596d9fc790_init.py  048066d684b0_init.py  04fac5c0795a_init.py  05ba6d94a691_init.py  061e2c9a96de_init.py  066ef0a61344_init.py  068b49254c66_init.py  068cde42384c_init.py  06c85e36afcb_init.py  071e8234739a_init.py  072b1906c384_init.py  073187d337a2_init.py  07519423e68c_init.py  0768fc076f1d_init.py  0801f5ceef44_init.py  081626883c8d_init.py  083609771fe3_init.py  0857cb172899_init.py  08f0b1f4b229_init.py  0962df5794a1_init.py  09f3f23ad26a_init.py  0a7032c2c13a_init.py  0c107ddf492e_init.py  0c225ec94cac_init.py  0cb676c3219a_init.py  0d1dd122273c_init.py  0d797d97f5a2_init.py  (+529 more)
backend/rest_api/api/: __init__.py  config.py  deps.py
backend/rest_api/api/v1/: routers.py
backend/rest_api/app/: bill.py  category.py  goods.py  purchase.py  seller.py  unit.py
backend/rest_api/app/entities/: bill.py
backend/rest_api/infra/database/: connection.py  orm.py
backend/rest_api/infra/grpc_server/: grpc_pb2.pyi  grpc_pb2_grpc.py  server.py
backend/rest_api/scripts/: prepare_grpc_proto.sh
backend/rest_api/src/: utils.py
backend/rest_api/src/api/: __init__.py  config.py  deps.py
backend/tg_bot/: Dockerfile  config.py  main.py  pyproject.toml  start.sh  utils.py  views.py
backend/tg_bot/app/: config.py  decorators.py  keyboards.py  main.py  recognize.py  utils.py
backend/tg_bot/handlers/: commands.py
backend/tg_bot/scripts/: prepare_grpc_proto.sh  prepare_po_file.sh  run_migrate.sh  start_bot.sh
(+447 files in other folders)
