[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["Yaroslav Pisarev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
aiofiles = "^24.1.0"
fastapi-login = "^1.10.3"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
qrcode = "^8.0"
requests = "^2.32.3"
pydantic-settings = "^2.7.0"
geoalchemy2 = "^0.16.0"
pydantic-extra-types = "^2.10.1"
uvicorn = "^0.34.0"
loguru = "^0.7.3"
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
