[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["Yaroslav Pisarev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
aiofiles = "^24.1.0"
fastapi-login = "^1.10.3"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
qrcode = "^8.0"
requests = "^2.32.3"
pydantic-settings = "^2.7.0"
geoalchemy2 = "^0.16.0"
pydantic-extra-types = "^2.10.1"
uvicorn = "^0.34.0"
loguru = "^0.7.3"
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"
python-multipart = "^0.0.20"
jinja2 = "^3.1.5"
pytelegrambotapi = "^4.26.0"
mailersend = "^0.5.8"
prometheus-client = "^0.22.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
