[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["Yaroslav PIsarev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.16.0"
pydantic-settings = "^2.7.0"
pyzbar = "^0.1.9"
opencv-python = "^4.10.0.84"
loguru = "^0.7.3"
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
